# mica

./: .gitignore  Cargo.toml  README.md  test.txt
.github/workflows/: builds.yml  release.yml
libs/lz4_flex/src/: sink.rs
libs/lz4_flex/src/block/: decompress.rs
src/: app.rs  main.rs  mica.rs
src/compositor/: dev.rs  mod.rs  tex.rs
src/gui/: app.rs  mod.rs
src/procreate/: ir.rs  mod.rs
src/silica/: ir.rs  mod.rs
