[package]
name = "mica"
version = "0.0.1"
edition = "2021"
authors = ["Fauzaan <mfauzaan@icloud.com>"]
description = "Cross-platform GPU-accelerated Procreate layer exporter" 
readme = "README.md"
repository = "https://github.com/mfauzaan/mica.git"
license = "MIT"

[workspace]
members = [
    "libs/lz4_flex"
]

[features]
default = []

[lib]
path = "src/mica.rs"
doctest = false

[dependencies]
# Procreate support
zip = { version = "0.6", default-features = false, features = ["deflate"] }
lz4_flex = { path = "libs/lz4_flex" }
minilzo-rs = "0.6.0"
plist = "1.3"
thiserror = "1.0"
regex = "1.6"
image = { version = "0.24", default-features = false, features = ["png"] }
once_cell = "1"
memmap2 = "0.9"
rayon = "1"
# GPU rendering
wgpu = "0.18"
bytemuck = { version = "1.12", features = ["derive"] }
# Async runtime
tokio = { version = "1.21", features = ["full"] }

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1

[build-dependencies]
cc = "1.0"
